--- a/akashtimetable.html
+++ b/akashtimetable.html
@@ -101,7 +101,7 @@
 
 <div class="topnav" id="myTopnav">
   <a href="https://akashnk.github.io/timetable/index.html">Home(Akash)</a>
-  <a href="https://akashnk.github.io/timetable/index.html">Akash</a>
+  <a href="https://akashnk.github.io/timetable/akashtimetable.html">Akash</a>
   <a href="https://akashnk.github.io/timetable/jeril.html">Jeril's</a>
   <a href="https://akashnk.github.io/timetable/nirvik.html">Nirvik's</a>
 <a href="https://akashnk.github.io/timetable/sayali.html">Sayali's</a>
@@ -125,31 +125,31 @@
 
         <td title="No Class" class="Holiday"></td>
         <td title="No Class" class="Holiday"></td>
-        <td rowspan="2" bgcolor="#A400FF">DIP</td>
-        <td title="No Class" class="Holiday"></td>
-        <td title="No Class" class="Holiday"></td>
+        <td rowspan="2" bgcolor="#A400FF">Medical Image Analysis</td>
+        <td bgcolor="#319A31">Healthcare Management</td></td>
+        <td bgcolor="#00AAAD">Molecular Imaging</td>
 
     </div>
 </tr>
 <tr>
     <th>9:00 - 10:00</th>
 
-    <td title="No Class" class="Holiday"></td>
+    <td bgcolor="#F7931E">Pattern Recognition</td>
     <td title="No Class" class="Holiday"></td>
 
-        <td bgcolor="#00AAAD">MEMS</td>
-        <td rowspan="2" bgcolor="#319A31">Biomaterials</td>
+        <td title="No Class" class="Holiday"></td>
+                <td title="No Class" class="Holiday"></td>
 
       </div>
 </tr>
     <tr>
         <th>10:00 - 11:00</th>
-            <td bgcolor="#A400FF">DIP</td>
+            <td bgcolor="#A400FF">Medical Image Analysis</td>
 
-            <td rowspan="2" bgcolor="#F7931E">Med Instrument</td>
-            <td bgcolor="#00AAAD">MEMS</td>
-            <td bgcolor="#A400FF">DIP</td>
-
+            <td rowspan="2" bgcolor="#319A31">Healthcare Management</td></td>
+             <td title="No Class" class="Holiday"></td>
+            <td bgcolor="#A400FF">Medical Image Analysis</td>
+        <td title="No Class" class="Holiday"></td>
           </div>
     </tr>
 
@@ -157,20 +157,21 @@
         <th>11:00 - 12:00</td>
 
             <td title="No Class" class="Holiday"></td>
+            <td bgcolor="#00AAAD">Molecular Imaging</td>
             <td title="No Class" class="Holiday"></td>
-            <td bgcolor="#F7931E">Med Instrument</td>
-            <td rowspan="2" bgcolor="#00AAAD">MEMS</td>
+              <td title="No Class" class="Holiday"></td>
 
         </div>
     </tr>
 
     <tr>
         <th>12:00 - 01:00</td>
+            
+            <td bgcolor="#319A31">Healthcare Management</td>
+<td title="No Class" class="Holiday"</td>
             <td title="No Class" class="Holiday"</td>
-            <td bgcolor="#319A31">Biomaterials</td>
-
-            <td title="No Class" class="Holiday"</td>
-            <td title="No Class" class="Holiday"</td>
+            <td bgcolor="#00AAAD">Molecular Imaging</td>
+              <td title="No Class" class="Holiday"></td>
 
 
 
@@ -193,9 +194,9 @@
     <tr>
         <th>02:00 - 03:00</td>
 
-            <td rowspan="3" bgcolor="#D5775F">Seminar-2</td>
-            <td rowspan="3" bgcolor="#BFA200">Minor Project 1</td>
-            <td rowspan="3" bgcolor="#E61400">Medical Instrumentation Lab</td>
+           <td title="No Class" class="Holiday"</td>
+            <td title="No Class" class="Holiday"</td>
+            <td title="No Class" class="Holiday"</td>
             <td title="No Class" class="Holiday"</td>
             <td title="No Class" class="Holiday"</td>
 
@@ -207,7 +208,10 @@
 
 
               <td title="No Class" class="Holiday"</td>
+              <td rowspan="2" bgcolor="#F7931E">Pattern Recognition</td>
               <td title="No Class" class="Holiday"</td>
+              <td rowspan="2" bgcolor="#F7931E">Educational Neuroscience</td>
+              <td bgcolor="#F7931E">Educational Neuroscience</td>
 
             </div>
         </tr>
