--- a/timetable.html
+++ b/timetable.html
@@ -101,7 +101,7 @@
 
 <div class="topnav" id="myTopnav">
   <a href="https://akashnk.github.io/timetable/index.html">Home(Akash)</a>
-  <a href="https://akashnk.github.io/timetable/index.html">Akash</a>
+  <a href="https://akashnk.github.io/timetable/akashtimetable.html">Akash</a>
   <a href="https://akashnk.github.io/timetable/jeril.html">Jeril's</a>
   <a href="https://akashnk.github.io/timetable/nirvik.html">Nirvik's</a>
 <a href="https://akashnk.github.io/timetable/sayali.html">Sayali's</a>
