--- a/akashtimetable.html
+++ b/akashtimetable.html
@@ -109,7 +109,7 @@
   <a href="https://akashnk.github.io/timetable/about.html">About</a>
 </div>
 <body>
-    <table id="timet" width="80%" align="center" >
+    <table id="timetnew" width="80%" align="center" >
     <div id="head_nav">
     <tr>
         <th>Time</th>
